--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4.2.1"
 actix-web-codegen = "4.1.0"
+actix-cors = "0.6.2"
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0"
